--- a/profil.html
+++ b/profil.html
@@ -5,10 +5,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Profil: Jana Czechita</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 	</head>
 	<body>
 
-		<div class="profil">
+
+		<div class="kontejner">
 
 			<div class="hlavicka">
 
@@ -35,6 +42,6 @@
 			</ul>
 
 		</div>
-
+     
 	</body>
 </html>
